# diffusion2d

./: diffusion2d.py  pyproject.toml
uygarkov/: diffusion2d.py  output.py
uygarkov.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
